UX Fixes For Location UI V2 - Fix applied to Point page for sub title readabiliyt issue - Fix for Route panel layout.
Fixes: N/A
Test: N/A

--- a/android/android-emu/android/skin/qt/html/css/route-panel.css
+++ b/android/android-emu/android/skin/qt/html/css/route-panel.css
@@ -53,7 +53,7 @@
     right: 8px;
     width: 24px;
     height: 24px;
-    padding: 8px;
+    padding: 8px 4px 8px 8px;
     text-align: center;
     cursor: pointer;
 }
